[gd_scene load_steps=10 format=3 uid="uid://cyp7gdk7w8mbv"]

[ext_resource type="AudioStream" uid="uid://cqodv5abp45wr" path="res://assets/SFX/lava-bubbling-ambience.mp3" id="1_7p2h2"]
[ext_resource type="AudioStream" uid="uid://5tdrf2hl43u5" path="res://assets/haydenfoundassets/nature-ambience-323729.mp3" id="2_lvbu6"]
[ext_resource type="AudioStream" uid="uid://p8ud4ysqccpr" path="res://assets/SFX/underwater-currents-ambience.mp3" id="3_c7pu5"]
[ext_resource type="Script" uid="uid://busw405b68h0v" path="res://scripts/trigger_body.gd" id="3_d57w0"]
[ext_resource type="AudioStream" uid="uid://c8pom7pp31hrg" path="res://assets/haydenfoundassets/Sizzling Symphony.mp3" id="5_8xmue"]
[ext_resource type="AudioStream" uid="uid://8sftrnqs1foi" path="res://assets/haydenfoundassets/Gentle Horizons.mp3" id="6_fwar3"]
[ext_resource type="AudioStream" uid="uid://dak0fp5i5jeig" path="res://assets/haydenfoundassets/wind-blowing-sfx-12809.mp3" id="8_x8y6t"]

[sub_resource type="BoxShape3D" id="BoxShape3D_ui4bh"]
size = Vector3(12.5, 10, 12.5)

[sub_resource type="BoxMesh" id="BoxMesh_dobhj"]

[node name="Audio_Box" type="Node3D" groups=["keep"]]

[node name="trigger_body" type="Area3D" parent="."]
collision_layer = 5
collision_mask = 5
script = ExtResource("3_d57w0")

[node name="CollisionShape3D" type="CollisionShape3D" parent="trigger_body"]
shape = SubResource("BoxShape3D_ui4bh")

[node name="MeshInstance3D" type="MeshInstance3D" parent="trigger_body"]
mesh = SubResource("BoxMesh_dobhj")

[node name="Transition_timer" type="Timer" parent="trigger_body"]

[node name="AudioStreamPlayer3D_lava" type="AudioStreamPlayer" parent="trigger_body"]
stream = ExtResource("1_7p2h2")
bus = &"Ambience"
parameters/looping = true

[node name="menu" type="AudioStreamPlayer" parent="trigger_body"]
stream = ExtResource("5_8xmue")
bus = &"Ambience"
parameters/looping = true

[node name="book" type="AudioStreamPlayer" parent="trigger_body"]
stream = ExtResource("6_fwar3")
bus = &"Ambience"
parameters/looping = true

[node name="tundra" type="AudioStreamPlayer" parent="trigger_body"]
stream = ExtResource("8_x8y6t")
bus = &"Ambience"
parameters/looping = true

[node name="AudioStreamPlayer3D_underwater" type="AudioStreamPlayer" parent="trigger_body"]
stream = ExtResource("3_c7pu5")
bus = &"Ambience"
parameters/looping = true

[node name="nature" type="AudioStreamPlayer" parent="trigger_body"]
stream = ExtResource("2_lvbu6")
bus = &"Ambience"
parameters/looping = true

[connection signal="body_entered" from="trigger_body" to="trigger_body" method="_on_body_entered"]
[connection signal="body_exited" from="trigger_body" to="trigger_body" method="_on_body_exited"]
[connection signal="timeout" from="trigger_body/Transition_timer" to="trigger_body" method="_on_transition_timer_timeout"]
